# zoomy-client-cpp

./: CMakeLists.txt  vcpkg.json
include/: CAutoController.hpp  CCommonBase.hpp  CDPIHandler.hpp  CWindow.hpp  CZoomyClient.hpp
src/: CAutoController.cpp  CDPIHandler.cpp  CWindow.cpp  CZoomyClient.cpp
